*** empty log message ***

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,67 @@
 2007-05-29  Joschka Boedecker  <jboedeck@uni-koblenz.de>
 
+	* configure.ac,
+	* ChangeLog,
+	* Makefile.am,
+	* README.MacOSX,
+	* acinclude.m4,
+	* configure.ac,
+	* app/agentspark/Makefile.am,
+	* app/fonttest/Makefile.am,
+	* app/fonttest/main.cpp,
+	* app/inputtest/Makefile.am,
+	* app/inputtest/main.cpp,
+	* app/monitorspark/Makefile.am,
+	* app/monitorspark/main.cpp,
+	* app/rcssmonitor3d/kerosin/Makefile.am,
+	* app/rcssmonitor3d/lite/Makefile.am,
+	* app/rcssmonitor3d/lite/camera.h,
+	* app/rcssmonitor3d/lite/glserver.h,
+	* app/rcssmonitor3d/lite/monitor.cpp,
+	* app/scenetest/Makefile.am,
+	* app/scenetest/main.cpp,
+	* app/simspark/Makefile.am,
+	* app/simspark/main.cpp,
+	* app/simspark/simspark.rb,
+	* lib/kerosin/Makefile.am,
+	* lib/kerosin/fontserver/font.cpp,
+	* lib/kerosin/fontserver/font.h,
+	* lib/kerosin/inputserver/inputserver.cpp,
+	* lib/kerosin/openglserver/openglserver.cpp,
+	* lib/kerosin/openglserver/openglserver.h,
+	* lib/kerosin/openglserver/openglwrapper.h,
+	* lib/kerosin/textureserver/texture.h,
+	* lib/kerosin/textureserver/textureserver.h,
+	* lib/oxygen/agentaspect/agentaspect.h,
+	* lib/oxygen/agentaspect/effector.h,
+	* lib/oxygen/physicsserver/odewrapper.h,
+	* lib/oxygen/sceneserver/sceneserver.cpp,
+	* lib/salt/bounds.h,
+	* lib/salt/defines.h,
+	* lib/salt/fileclasses.h,
+	* lib/salt/gmath.h,
+	* lib/salt/matrix.h,
+	* lib/salt/path.h,
+	* lib/salt/rect.h,
+	* lib/salt/sharedlibrary.h,
+	* lib/salt/tvector.h,
+	* lib/salt/vector.h,
+	* lib/spark/Makefile.am,
+	* lib/spark/spark.cpp,
+	* lib/zeitgeist/class.h,
+	* plugin/filesystemzip/filesystemzip.h,
+	* plugin/gyrorateperceptor/.cvsignore,
+	* plugin/inputsdl/Makefile.am,
+	* plugin/inputsdl/inputdevicesdl.h,
+	* plugin/inputsdl/inputsystemsdl.cpp,
+	* plugin/inputsdl/inputsystemsdl.h,
+	* plugin/objimporter/.cvsignore,
+	* utility/rcssnet/exception.cpp,
+	* utility/rcssnet/socket.cpp: 
+	- merged projectx (MacOS X port) branch with main branch
+
+2007-05-29  Joschka Boedecker  <jboedeck@uni-koblenz.de>
+
 	* plugin/voidmeshimporter/voidmeshimporter.cpp:
 	- added a minimal sanity check whether the parsed
 	  file actually is a valid .void file
