--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2007-06-04  Hedayat Vatankhah  <hedayat@grad.com>
+
+	* plugin/collisionperceptor/forceresistanceperceptor.h: 
+	* plugin/collisionperceptor/forceresistanceperceptor.cpp:
+	- corrected the FRP to provide one position (in local coordiantes)
+	  and one force vector instead of every contact point.
+
 2007-06-03  Joschka Boedecker  <jboedeck@uni-koblenz.de>
 
 	* plugin/sparkmonitor/sparkmonitorlogfileserver.cpp,
