- added several people who helped with patches and/or   bug/reports and/or useful comments

--- a/THANKS
+++ b/THANKS
@@ -24,3 +24,10 @@ Ma Jie <me@goodma.com>
 Ali Nadalizadeh <nadalisoft@yahoo.com>
 Yuan Xu <xuyuan.cn@gmail.com>
 Nima Aghaeepour <Nimaa@khayam.ut.ac.ir>
+Sander van Dijk <sgdijk@ai.rug.nl>
+Guanbin Cui <wanshanju@gmail.com>
+snow <root@sylph.white-void.net>
+Carlos Bustamante <kamui_pegasus@yahoo.com.mx>
+Shivaram Kalyanakrishnan <shivaram@cs.utexas.edu>
+Tobias Warden <warden@projectiwear.org>
+
