--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2007-06-08  Hedayat Vatankhah  <hedayat@grad.com>
+
+	* plugin/soccer/soccerruleaspect/soccerruleaspect.cpp: 
+	- wrote new MoveAgent function (stolen code from BeamEffector!)
+	- fixed ClearPlayers for the new agent
+
 2007-06-05  Joschka Boedecker  <jboedeck@uni-koblenz.de>
 
 	* NEWS:
