--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2007-06-15  Jan Murray  <murray@aeonflux>
+
+	* app/simspark/rsg/agent/soccerbot.rsg:
+	  added GameStatePerceptor
+	
+	* gamestateperceptor.cpp:
+	  shortened predicate names: GameState -> GS, time -> t, playmode -> pm
+
 2007-06-13  Jan Murray  <murray@uni-koblenz.de>
 
 	* Makefile.am, export.cpp:
