--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2007-06-17  Jan Murray  <murray@aeonflux>
+
+	* plugin/soccer/soccercontrolaspect/soccercontrolaspect.cpp:
+	  adapted paths to recorderhandles for left/right goal
+
+	* app/simspark/rsg/agent/soccer.rsg:
+	  fixed collision and recorder handlers for goals
+
 2007-06-17  Joschka Boedecker  <jboedeck@uni-koblenz.de>
 
 	* plugin/soccer/soccerruleaspect/soccerruleaspect.cpp:
