--- a/INSTALL
+++ b/INSTALL
@@ -1,127 +1,16 @@
-rcssserver3D-0.5.2 Installation
-===============================
-(C) 2004 Universitaet Koblenz, Germany.
+Installation Instructions
+*************************
 
-Prior to compiling and installing the rcssserver3D, you need to 
-install a few software packages. You can compile and install 
-rcssserver3D in two different ways, a "light" installation and the 
-full installation. 
-With the full installation, you get an additional library 
-(called kerosin), which is useful to visualize objects nicely, 
-especially articulated objects (this are objects consisting of more 
-than one geometry linked with joints). These features are not (yet) 
-required for the soccer simulation.
-The light installation, which is the default, you get a not so fancy
-OpenGL visualization.
+Copyright (C) 1994, 1995, 1996, 1999, 2000, 2001, 2002, 2004, 2005 Free
+Software Foundation, Inc.
 
-To enable the full installation, pass the "--enable-kerosin" flag to 
-the `configure' shell script.
-For the generic installation instructions, see the text below the 
-specific instructions here.
-
-
-Required libraries for the default installation
-===============================================
-
-* spades
-  - working versions: 1.0, older versions may also work
-  - get it at: http://sourceforge.net/projects/spades-sim
-  - description: agent middleware, handles timing issues and networking
-  - additional info: you need a recent version of expat for spades
-
-* ruby
-  - working versions: 1.8.0 or newer, version 1.8.4 does *NOT* work, however
-  - get it at: http://www.ruby-lang.org/
-  - description: scripting language
-  - additional info: if you compile ruby yourself, configure with
-    --enable-shared
-
-* boost
-  - working versions: 1.30.2, 1.31.0, 1.33.1
-  - get it at: http://www.boost.org/
-  - description: c++ programming extensions
-
-* ode
-  - working versions: 0.039, 0.5
-  - get it at: http://sourceforge.net/projects/opende
-  - descriptions: for simulating articulated rigid body dynamics
-
-* OpenGL, GLUT
-  You need the OpenGL and GLUT headers for the visualization. This may
-  be dependent on your graphics card. (GLUT is the OpenGL Utility 
-   Toolkit)
-  - part for example of XFree86-Mesa-devel
-  - you should get it with your linux distro.
-
-* additional required stuff (usually present in any decent system)
-  - zlib, http://www.gzip.org/zlib/
-  - recent versions of automake, autoconf, libtool can be helpful if 
-    config files need to be regenerated
-
-* Texture files for the rcssmonitor3D-lite Monitor
-  - you need textures for the grass and the skybox. They have to be in
-    BMP format with 1 plane and 24bpp.
-  - the files have to be named grass.bmp, front.bmp, back.bmp, left.bmp,
-    right.bmp, top.bmp, bottom.bmp.
-  - put the files in your $HOME/.rcssserver3d directory after it has been created.
-  - A simple set of textures can be downloaded from
-    http://www.uni-koblenz.de/~murray/robocup/rcssmonitor-lite-textures.tgz
-    Just extract the archive to your $HOME/.rcssserver3d using
-    tar xvfz rcssmonitor-lite-textures.tgz
-
-Additionally required libraries for the full installation
-=========================================================
-
-* SDL
-  - working versions: 1.2
-  - get it at: http://www.libsdl.org/
-  - description: low level access to audio, keyboard, mouse, joystick,
-                 3D hardware via OpenGL, and 2D video framebuffer
-
-* freetype
-  - working versions: 2.1.2
-  - get it at: http://www.freetype.org/
-  - description: FreeType 2 is a software font engine
-
-* DevIL
-  - working versions: 1.6.5
-  - get it at: http://openil.sourceforge.net/
-  - description: Developer's Image Library (DevIL) is a library that
-  provides image loading capabilities,
-
-Optional useful libraries for the full installation
-===================================================
-
-* fmod
-  - working versions: 3.7
-  - get it at: http://www.fmod.org/
-  - description: sound support
-  - installation notes:
-     - Unpack the .tar.gz file. 
-     - Move the header files from the ./api/inc/ directory in the 
-       package into a "fmod/" directory in your "include" tree, e.g.
-       /usr/local/include/fmod/
-     - Move the library (the libfmod-X.YZ.so file) from the ./api/ 
-       directory of the package into a library tree, e.g. 
-       /usr/local/lib/. 
-     - Create a symbolic link from /usr/local/lib/libfmod.so (or 
-       whatever directory you've chosen) to the fmod library.
-
-
-=== specific installation instructions part ends here ===
-=== generic installation instructions below this line ===
-
- 
-Copyright (C) 1994, 1995, 1996, 1999, 2000, 2001, 2002 Free Software
-Foundation, Inc.
-
-   This file is free documentation; the Free Software Foundation gives
+This file is free documentation; the Free Software Foundation gives
 unlimited permission to copy, distribute and modify it.
 
 Basic Installation
 ==================
 
-   These are generic installation instructions.
+These are generic installation instructions.
 
    The `configure' shell script attempts to guess correct values for
 various system-dependent variables used during compilation.  It uses
@@ -181,9 +70,9 @@ The simplest way to compile this package is:
 Compilers and Options
 =====================
 
-   Some systems require unusual options for compilation or linking that
-the `configure' script does not know about.  Run `./configure --help'
-for details on some of the pertinent environment variables.
+Some systems require unusual options for compilation or linking that the
+`configure' script does not know about.  Run `./configure --help' for
+details on some of the pertinent environment variables.
 
    You can give `configure' initial values for configuration parameters
 by setting variables in the command line or in the environment.  Here
@@ -196,7 +85,7 @@ is an example:
 Compiling For Multiple Architectures
 ====================================
 
-   You can compile the package for more than one kind of computer at the
+You can compile the package for more than one kind of computer at the
 same time, by placing the object files for each architecture in their
 own directory.  To do this, you must use a version of `make' that
 supports the `VPATH' variable, such as GNU `make'.  `cd' to the
@@ -213,19 +102,19 @@ for another architecture.
 Installation Names
 ==================
 
-   By default, `make install' will install the package's files in
-`/usr/local/bin', `/usr/local/man', etc.  You can specify an
-installation prefix other than `/usr/local' by giving `configure' the
-option `--prefix=PATH'.
+By default, `make install' installs the package's commands under
+`/usr/local/bin', include files under `/usr/local/include', etc.  You
+can specify an installation prefix other than `/usr/local' by giving
+`configure' the option `--prefix=PREFIX'.
 
    You can specify separate installation prefixes for
 architecture-specific files and architecture-independent files.  If you
-give `configure' the option `--exec-prefix=PATH', the package will use
-PATH as the prefix for installing programs and libraries.
-Documentation and other data files will still use the regular prefix.
+pass the option `--exec-prefix=PREFIX' to `configure', the package uses
+PREFIX as the prefix for installing programs and libraries.
+Documentation and other data files still use the regular prefix.
 
    In addition, if you use an unusual directory layout you can give
-options like `--bindir=PATH' to specify different values for particular
+options like `--bindir=DIR' to specify different values for particular
 kinds of files.  Run `configure --help' for a list of the directories
 you can set and what kinds of files go in them.
 
@@ -236,7 +125,7 @@ option `--program-prefix=PREFIX' or `--program-suffix=SUFFIX'.
 Optional Features
 =================
 
-   Some packages pay attention to `--enable-FEATURE' options to
+Some packages pay attention to `--enable-FEATURE' options to
 `configure', where FEATURE indicates an optional part of the package.
 They may also pay attention to `--with-PACKAGE' options, where PACKAGE
 is something like `gnu-as' or `x' (for the X Window System).  The
@@ -251,11 +140,11 @@ you can use the `configure' options `--x-includes=DIR' and
 Specifying the System Type
 ==========================
 
-   There may be some features `configure' cannot figure out
-automatically, but needs to determine by the type of machine the package
-will run on.  Usually, assuming the package is built to be run on the
-_same_ architectures, `configure' can figure that out, but if it prints
-a message saying it cannot guess the machine type, give it the
+There may be some features `configure' cannot figure out automatically,
+but needs to determine by the type of machine the package will run on.
+Usually, assuming the package is built to be run on the _same_
+architectures, `configure' can figure that out, but if it prints a
+message saying it cannot guess the machine type, give it the
 `--build=TYPE' option.  TYPE can either be a short name for the system
 type, such as `sun4', or a canonical name which has the form:
 
@@ -270,7 +159,7 @@ where SYSTEM can have one of these forms:
 need to know the machine type.
 
    If you are _building_ compiler tools for cross-compiling, you should
-use the `--target=TYPE' option to select the type of system they will
+use the option `--target=TYPE' to select the type of system they will
 produce code for.
 
    If you want to _use_ a cross compiler, that generates code for a
@@ -281,9 +170,9 @@ eventually be run) with `--host=TYPE'.
 Sharing Defaults
 ================
 
-   If you want to set default values for `configure' scripts to share,
-you can create a site shell script called `config.site' that gives
-default values for variables like `CC', `cache_file', and `prefix'.
+If you want to set default values for `configure' scripts to share, you
+can create a site shell script called `config.site' that gives default
+values for variables like `CC', `cache_file', and `prefix'.
 `configure' looks for `PREFIX/share/config.site' if it exists, then
 `PREFIX/etc/config.site' if it exists.  Or, you can set the
 `CONFIG_SITE' environment variable to the location of the site script.
@@ -292,7 +181,7 @@ A warning: not all `configure' scripts look for a site script.
 Defining Variables
 ==================
 
-   Variables not defined in a site shell script can be set in the
+Variables not defined in a site shell script can be set in the
 environment passed to `configure'.  However, some packages may run
 configure again during the build, and the customized values of these
 variables may be lost.  In order to avoid this problem, you should set
@@ -300,14 +189,18 @@ them in the `configure' command line, using `VAR=value'.  For example:
 
      ./configure CC=/usr/local2/bin/gcc
 
-will cause the specified gcc to be used as the C compiler (unless it is
-overridden in the site shell script).
+causes the specified `gcc' to be used as the C compiler (unless it is
+overridden in the site shell script).  Here is a another example:
+
+     /bin/bash ./configure CONFIG_SHELL=/bin/bash
+
+Here the `CONFIG_SHELL=/bin/bash' operand causes subsequent
+configuration-related scripts to be executed by `/bin/bash'.
 
 `configure' Invocation
 ======================
 
-   `configure' recognizes the following options to control how it
-operates.
+`configure' recognizes the following options to control how it operates.
 
 `--help'
 `-h'
